# libfacedetection

./: .gitignore  CMakeLists.txt  COMPILE.md  ChangeLog  LICENSE  README.md  aarch64-toolchain.cmake  build_android.sh  dartabse.py  front.py  login.py  tk.py
example/: benchmark-highway.cpp  benchmark.cpp  detect-camera.cpp  detect-image-highway.cpp  detect-image-stb.cpp  detect-image.cpp  libfacedetect-example.cpp  libfacedetect.cpp  libfacedetectcnn-example.cpp
example/opencv_dnn/: README.md
example/opencv_dnn/cpp/: CMakeLists.txt  Makefile.config  detect-camera.cpp  detect-image.cpp  detect.cpp  face_def.hpp  priorbox.cpp  priorbox.hpp  utils.cpp  utils.hpp
example/opencv_dnn/python/: detect.py  priorbox.py  utils.py
highway/: CMakeLists.txt  README.md
highway/benchmark/: hw_benchmark.cpp  hw_image_benchmark.cpp  hw_resolution_benchmark.cpp
highway/cmake/: fdt_hwConfig.cmake.in
highway/docs/: README.md  hw-cross-platform-execution-plan.md  hw-performance-report.md  hw-plan.md  hw-status.md
highway/include/: facedetect_hw.h  facedetection_export.h
highway/src/: facedetect_hw.cpp  hw_blob.cpp  hw_blob.h  hw_filter.cpp  hw_filter.h  hw_image.cpp  hw_image.h  hw_kernels.h  hw_kernels_hw.cpp  hw_kernels_intrinsics.cpp  hw_kernels_scalar.cpp  hw_layers.cpp  hw_layers.h  hw_model.cpp  hw_model.h  hw_network.cpp  hw_network.h  hw_postprocess.cpp  hw_postprocess.h
highway/tests/: hw_test_kernels.cpp
include/: facedetect-dll.h  facedetectcnn-dll.h
lib/: libfacedetect-x64.lib  libfacedetect.lib  libfacedetectcnn-x64.lib
mobile/: README.md
mobile/Android/: build.gradle  settings.gradle
mobile/Android/FaceDetection/: build.gradle  local.properties  settings.gradle
mobile/Android/FaceDetection/app/: build.gradle
mobile/Android/FaceDetection/app/src/main/cpp/: CMakeLists.txt  facedetectcnn-jni.cpp  facedetectcnn-model.cpp  facedetectcnn.h
mobile/Android/FaceDetection/app/src/main/res/layout/: activity_main.xml
mobile/Android/FaceDetection/app/src/main/res/values/: strings.xml
mobile/Android/FaceDetection/gradle/wrapper/: gradle-wrapper.properties
mobile/Android/app/: build.gradle
mobile/Android/app/src/androidTest/java/org/dp/facedetection/: ExampleInstrumentedTest.kt
mobile/Android/app/src/main/: AndroidManifest.xml
mobile/Android/app/src/main/cpp/: CMakeLists.txt  facedetectcnn-int8data.cpp  facedetectcnn-jni.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp
mobile/Android/app/src/main/cpp/opencv2/: cvconfig.h  opencv_modules.hpp
mobile/Android/app/src/main/java/org/dp/facedetection/: Face.java  MainActivity.kt
mobile/Android/gradle/wrapper/: gradle-wrapper.properties
mobile/Android/openCVLibrary401/: build.gradle
mobile/Android/openCVLibrary401/src/main/: AndroidManifest.xml
mobile/Android/openCVLibrary401/src/main/java/org/opencv/android/: OpenCVLoader.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/calib3d/: Calib3d.java  StereoBM.java  StereoMatcher.java  StereoSGBM.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/core/: Algorithm.java  Core.java  TickMeter.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/dnn/: DictValue.java  Dnn.java  Layer.java  Net.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/features2d/: AKAZE.java  AgastFeatureDetector.java  BFMatcher.java  BOWImgDescriptorExtractor.java  BOWKMeansTrainer.java  BOWTrainer.java  BRISK.java  DescriptorMatcher.java  FastFeatureDetector.java  Feature2D.java  Features2d.java  FlannBasedMatcher.java  GFTTDetector.java  KAZE.java  MSER.java  ORB.java  Params.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/imgproc/: CLAHE.java  GeneralizedHough.java  GeneralizedHoughBallard.java  GeneralizedHoughGuil.java  Imgproc.java  LineSegmentDetector.java  Subdiv2D.java
mobile/Android/openCVLibrary401/src/main/java/org/opencv/ml/: ANN_MLP.java  Boost.java  DTrees.java  EM.java  KNearest.java  Ml.java  RTrees.java  (+7 more)
mobile/iOS/FaceDetection/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
mobile/iOS/FaceDetection.xcodeproj/: project.pbxproj
mobile/iOS/FaceDetection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mobile/iOS/FaceDetection.xcodeproj/project.xcworkspace/xcuserdata/Robin.xcuserdatad/: UserInterfaceState.xcuserstate
mobile/iOS/FaceDetection.xcodeproj/xcuserdata/Robin.xcuserdatad/xcschemes/: xcschememanagement.plist
models/: README.md
models/caffe/: yufacedetectnet-open-v1.caffemodel  yufacedetectnet-open-v1.prototxt  yufacedetectnet-open-v1.solver.prototxt  yufacedetectnet-open-v1.train.prototxt  yufacedetectnet-open-v2.caffemodel  yufacedetectnet-open-v2.prototxt  yufacedetectnet-open-v2.solver.prototxt  yufacedetectnet-open-v2.train.prototxt
models/openvino/: yufacedetectnet-open-v1-320x240.xml
opencv_dnn/: README.md
opencv_dnn/cpp/: CMakeLists.txt  detect-camera.cpp  detect-image.cpp  detect.cpp  face_def.hpp  priorbox.cpp  priorbox.hpp  utils.cpp  utils.hpp
opencv_dnn/python/: detect.py  priorbox.py  utils.py
python/example/: detect-image.py
python/src/: facedetector.cpp  facedetector.h  main.cpp
rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/dev/: benchmark_network_groups.rs  benchmark_phases.rs
rust/dev/resolution_benchmark/: .gitignore  Cargo.toml
rust/dev/resolution_benchmark/src/: main.rs
rust/docs/: README.md  rs-cargo-publish-preparation-plan.md  rs-migration-execution-plan.md  rs-performance-optimization-report.md  rs-status.md
rust/docs/diagrams/: rs-optimization-timeline.excalidraw  rs-pipeline-architecture.excalidraw  rs-simd-kernel-strategy.excalidraw
rust/examples/: benchmark.rs
rust/src/: blob.rs  detector.rs  error.rs  ffi.rs  filter.rs  input.rs  layers.rs  lib.rs  model.rs  network.rs  postprocess.rs  result.rs
rust/src/kernels/: mod.rs  scalar.rs  x86.rs
src/: facedetectcnn-data.cpp  facedetectcnn-int8data.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h
stb_include/: stb_draw.h
(+35 files in other folders)
